Fix GmAccesService
Problema sanado fazendo com que os admin, parava de usar comando in jogo, problema e que verificava o gm antes dele se tornar o gm e acusava que jogador tava com status invalido